# arcs-backend

./: .gitattributes  .gitignore  .gitmodules  .pnp.cjs  Cargo.toml  Dockerfile  README.md  TODO.md  app.js  auth.md  compose.yaml  fly.toml  index.js  mix.exs  nohup.out  package-lock.json  package.json  presence.md  server.js  todo.md  vercel.json
.docker/: docker-compose.yaml
.github/workflows/: main.yml  node.js.yml  webpack.yml
api/: index.js
assets/: tailwind.config.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: arcs.ex  arcs_web.ex  bartender.ex  chat.ex  chat_web.ex
lib/arcs/: application.ex  mailer.ex  message.ex  release.ex
lib/arcs_web/: channel.ex  endpoint.ex  gettext.ex  presence.ex  router.ex  telemetry.ex
lib/chat/: application.ex  message.ex  repo.ex
lib/chat_web/: endpoint.ex  router.ex
middleware/: user+403.js
priv/repo/: seeds.exs
public/: manifest.json  serviceworker.js  site.webmanifest
public/assets/: identicon.js  identicons.bundled.js  pako.js  pnglib.js  serviceworker.js  universal.js
public/css/: colormind-paper-dashboard.css  main+signupin.css  main.css
public/data/: message.js  user.js
routes/: admin.js  auth.js  bopbot.js  error.js  extras.js  index.js  index2.js  login.js  main.js  profile.js  sui.js  test.js
routes/errors/: 401.js  403.js  404.js  (+1 more)
src/: lib.rs  main.rs  model.rs  test.rs  user.rs
test/: test_helper.exs
views/: about.ejs  admin.ejs  bopbot.ejs  changelog.ejs  chat.ejs  editinfo.ejs  error.ejs  index.ejs  index2.ejs  main.ejs  profile.ejs  rules.ejs  test.ejs
(+40 files in other folders)
